--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,6 +12,8 @@
   <% end %>
 
   <div class="actions">
+    <%= form.label :name, "Name" %>
+    <%= form.text_field :name %>
     <%= form.submit %>
   </div>
 <% end %>
