--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -12,7 +12,6 @@
   <tbody>
     <% @events.each do |event| %>
       <tr>
-
         <td><%= link_to 'Show', event %></td>
         <td><%= link_to 'Edit', edit_event_path(event) %></td>
         <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -24,4 +23,4 @@
 <br>
 
 <%= link_to 'New Event', new_event_path %>
-<%= link_to 'Sign in', user_signin_path %>
+<%= link_to 'Sign in', user_login_path %>
